# openharmony-ebike-safe-charging-terminal

./: .gitignore  OPEN_SOURCE_SCOPE.md  README.md  SECURITY.md
docs/: README.md
docs/hardware/drawio/: OpenHarmony新能源汽车安全充电终端_硬件系统专业图.drawio  manifest.json  图2-1 硬件系统整体组成图.drawio  图2-2 样机机械布局示意图.drawio  图2-3 电路模块连接关系图.drawio  图2-4 四路继电器接线图.drawio
docs/zh/: current-development-status.md  detailed-product-development-plan.md  four-relay-wiring.md  hardware-wiring.md  huawei-iotda-checklist.md  k1-k4-cloud-flashing-guide.md  project-overview.md  project-plan.md  reuse-summary.md  software-state-machine-and-demo.md  su03t-safe-charge-binding.md  terminal-development-plan.md
firmware/rk2206-safe-charge-core/: BUILD.gn  README.md  iot_smart_home_example.c
firmware/rk2206-safe-charge-core/include/: adc_key.h  buzzer_control.h  charge_feedback.h  charge_safety.h  components.h  drv_light.h  drv_motor.h  drv_sensors.h  gas_sensor.h  human_sensor.h  iot.h  lcd.h  lcd_font.h  picture.h  power_sensor.h  relay_control.h  safe_charge_assets.h  smart_home.h  smart_home_event.h
firmware/rk2206-safe-charge-core/src/: adc_key.c  buzzer_control.c  charge_feedback.c  charge_safety.c  components.c  drv_light.c  drv_motor.c  drv_sensors.c  gas_sensor.c  human_sensor.c  iot.c  lcd.c  picture.c  power_sensor.c  relay_control.c  safe_charge_assets.c  smart_home.c  smart_home_event.c
scripts/: start-dashboard.ps1
web/northbound-safe-charge-dashboard/: .env.example  README.md  package-lock.json  package.json  vite.config.mjs
web/northbound-safe-charge-dashboard/server/: defaultData.mjs  (+5 more)
(+3 files in other folders)
